--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <body>
     <main id="main">
     </main>
-    <script src="index.js"></script>
+    <script src="index.js">Coded Along</script>
   </body>
 </html>
